--- a/build.xml
+++ b/build.xml
@@ -7,6 +7,7 @@
             <classpath location="lib/junit-4.11.jar"/>
             <classpath location="lib/hamcrest-core-1.3.jar"/>
             <classpath location="lib/hamcrest-library-1.3.jar"/>
+            <classpath location="lib/mockito-all-1.9.5.jar"/>
         </javac>
     </target>
 
@@ -21,6 +22,7 @@
                 <pathelement location="lib/junit-4.11.jar"/>
                 <pathelement location="lib/hamcrest-core-1.3.jar"/>
                 <pathelement location="lib/hamcrest-library-1.3.jar"/>
+                <pathelement location="lib/mockito-all-1.9.5.jar"/>
                 <pathelement location="out"/>
             </classpath>
             <test name="com.thoughtworks.biblioteca.DisplayTest" todir="."/>
